--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-basis",
+  "name": "node-basis-wrapper",
   "version": "0.0.0",
   "description": "simple node wrapper around a compiled basis-universal executable",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "basis": "./index.js"
+    "node-basis": "./index.js"
   },
   "keywords": [
     "basis",
